--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -130,7 +130,7 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color: #9F2242;
+	background-color: #0C6D36;
 	-webkit-transition: .4s;
 	transition: .4s;
 }
